# wave

./: .gitignore  LICENSE  Makefile  README.md  doxygen_config.dox  notice.c
Wave1249/: CMakeCache.txt  Makefile  NIST-kat  PQCgenKAT_sign  api.c  api.h  batch_sign  benchmark  benchmark.c  benchmark_speed  benchmark_speed.c  benchmark_time  cmake_install.cmake  combinadics_test.c  gen_trit_comp.py  keygen.h  params.h  sign_test.c  verify_test  verify_test.c
Wave1249/wave/: randperm.h  sample.h
Wave1644/: CMakeCache.txt  CMakeLists.txt  Makefile  PQCgenKAT_sign  PQCgenKAT_sign.c  batch_sign  batch_sign.c  benchmark  benchmark_speed  benchmark_time  cmake_install.cmake  fq_arithmetic  keygen_test.c  params.h  prng  sign.c  sign.h  types.h  util  verify_test
Wave1644/wave/: decode.c  reject_toy.c
Wave822/: CMakeCache.txt  Makefile  NIST-kat  PQCgenKAT_sign  batch_sign  benchmark  benchmark_speed  benchmark_time  benchmark_time.c  cmake_install.cmake  cpucycles.h  fq_arithmetic  keygen.c  params.h  verify.c  verify.h  verify_test
Wave822/wave/: decode.h  randperm.c  reject.c  sample.c
common/: CMakeLists.txt  PQCgenKAT_sign.c  api.h  batch_sign.c  benchmark.c  benchmark_speed.c  benchmark_time.c  combinadics_test.c  gen_trit_comp.py  keygen.c  keygen.h  keygen_test.c  main.c  params.h  sign.c  sign.h  sign_test.c  types.h  verify.c  verify.h  verify_test.c
common/NIST-kat/: PQCgenKAT_sign.c  api.h
common/fq_arithmetic/: mf3.c  mf3.h  types_f3.h  vf2.c  vf2.h  vf3.c  vf3.h
common/prng/: prng.c  prng.h
common/util/: Makefile  bitstream.c  bitstream.h  compress.c  compress.h  compress_comb.c  djbsort.h  djbsort_portable.c  gauss.c  gauss.h  hash.c  hash.h  mf3permut.c  mf3permut.h  popcount.h  test_gauss.c  tritstream.c  tritstream.h
common/wave/: decode.c  distrib.h  randperm.c  randperm.h  reject.c  reject.h  reject_toy.c  sample.c  sample.h
documentation/html/: _c_make_c_compiler_id_8c_source.html  _n_i_s_t-kat_2_p_q_cgen_k_a_t__sign_8c_source.html  _n_i_s_t-kat_2api_8h_source.html  _p_q_cgen_k_a_t__sign_8c_source.html  annotated.html  annotated_dup.js  api_8c_source.html  api_8h_source.html  arith__f3_8h_source.html  bitstream_8c_source.html  bitstream_8h_source.html  classes.html  classgen__trit__comp_1_1_node.html  combinadics__test_8c_source.html  compress_8c_source.html  compress_8h_source.html  compress__comb_8c_source.html  config_8h_source.html  decode_8c_source.html  decode_8h_source.html  dir_196a207b9e54d198efe5479da03355cd.html  dir_196a207b9e54d198efe5479da03355cd.js  dir_23ec12649285f9fabf3a6b7380226c28.html  dir_23ec12649285f9fabf3a6b7380226c28.js  dir_5a4e753d555bcbf542e2d8a1dece6bc0.html  dir_5a4e753d555bcbf542e2d8a1dece6bc0.js  dir_95e29a8b8ee7c54052c171a88bb95675.html  dir_a929efa258b4466b9b139c51e89f39ea.html  dir_a929efa258b4466b9b139c51e89f39ea.js  dir_c5dffd81427be4d2811f411918ed210c.html  dir_c5dffd81427be4d2811f411918ed210c.js  dir_de1d559ee29b9529c3eb971659538ce1.html  dir_de1d559ee29b9529c3eb971659538ce1.js  dir_f89abcb304c928c7d889aa5625570de5.html  dir_f89abcb304c928c7d889aa5625570de5.js  dir_fecfe773f908b91c373e1f72e381ab2e.html  dir_fecfe773f908b91c373e1f72e381ab2e.js  distrib__128nist_8c_source.html  distrib__toy_8c_source.html  djbsort_8h_source.html  (+106 more)
documentation/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  searchdata.js
